--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Hate my work</title>
 </head>
 <body>
+    <h1>현재시각:<span> </span></h1>
     <div class="timetogo">
     <h2>몇시에 퇴근하시나요?</h2>
     <form class="timetogo_form">
@@ -16,8 +17,7 @@
         <button>here</button>
     </form>
     </div>
-<h1>현재시각 <span></span></h1>
-<h3>퇴근까지 <span></span></h3>
+<h3>퇴근까지!  <span> </span></h3>
 
 
 
