--- a/index.html
+++ b/index.html
@@ -19,7 +19,16 @@
     </div>
 <h3>퇴근까지!  <span> </span></h3>
 
+<form class="todo">
+    <input type="text" placeholder="미뤄야할일🤣">
+</form>
+<ul>
 
+</ul>
+<form class="moneyday">
+<input type="text" placeholder="월급날(일)">
+</form>
+<h4></h4>
 
 
     <script src="first2.js"></script>
